<resources>
    <string name="app_name">God Bless</string>
    <string name="title_activity_navdraw">Navdraw</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="inputText1">Enter Bin No</string>
    <string name="inputText2">Enter Bin Level</string>
    <string name="btnAdd">Add</string>
    <string name="btnEdit">Edit</string>
    <string name="fill_level">Fill Level</string>
    <string name="bin_number">Bin Number</string>
    <string name="location">Location</string>
    <string name="edit">Edit</string>
    <string name="view_details">View Details</string>
    <string name="search">Search</string>
    <string name="fillLevelHigh">Collect now!</string>
    <string name="fillLevelLow">Do not collect</string>
</resources>