<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="6dp"
    android:elevation="6dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/ic_launcher"
            android:id="@+id/img1"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"/>


        <TextView
            android:id="@+id/bin_number2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/img1"
            android:text="Bin Number:"
            android:textColor="#000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bin_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="156dp"
            android:layout_toEndOf="@+id/img1"
            android:text="@string/bin_number"
            android:textColor="#000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fill_level2"
            android:layout_width="143dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bin_number"
            android:layout_marginStart="10dp"
            android:layout_marginTop="-1dp"
            android:layout_toEndOf="@+id/img1"
            android:text="Fill Level      :"
            android:textColor="#000"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/fill_level"
            android:layout_width="143dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bin_number"
            android:layout_marginStart="155dp"
            android:layout_marginTop="-1dp"
            android:layout_toEndOf="@+id/img1"
            android:text="@string/fill_level"
            android:textColor="#000"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/locationText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fill_level"
            android:layout_marginStart="10dp"
            android:layout_marginTop="-1dp"
            android:layout_toEndOf="@+id/img1"
            android:text="Location:"
            android:textColor="#000"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/locationText"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fill_level"
            android:layout_marginStart="118dp"
            android:layout_marginTop="-1dp"
            android:layout_toEndOf="@+id/img1"
            android:text="@string/location"
            android:textColor="#000"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_below="@+id/locationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/edit"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnView"
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/view_details"
                android:textAllCaps="false" />

        </LinearLayout>


    </RelativeLayout>



</androidx.cardview.widget.CardView>